# ti-cc13xx-cc25xx-bootloader

./: .gitignore  .travis.yml  Cargo.toml  README.md
firmware/: firmware.bincode  gateway_CC1310_LAUNCHXL_tirtos_gcc.hex  test_parsing.ihex
src/: firmware_image.rs  lib.rs  run_test.sh
src/bootloader/: commands.rs  mod.rs
src/firmware/: firmware.bincode  test_parsing.ihex
tests/: test_lib.rs
